No need to throw if restoring an empty iterator